2007-09-26  Lluis Sanchez Gual <lluis@novell.com> 

	* ChangeLogAddIn.addin.xml: Add missing identifier for the add-in
	  preferences dialog.

2007-09-21  Lluis Sanchez Gual <lluis@novell.com> 

	* ChangeLogAddIn.addin.xml: Bump MD version.

2007-09-20  Lluis Sanchez Gual <lluis@novell.com> 

	* ChangeLogAddIn.addin.xml: Added an Other section in the MD property dialog
	  and moved some options there to avoid too many branches.

2007-09-10  Lluis Sanchez Gual <lluis@novell.com> 

	* CommitDialogExtensionWidget.cs: Regenerate changelog entries after
	  changing the user name and mail options. Fixes bug #82745.

2007-09-04  Michael Hutchinson <MHutchinson@novell.com>

	* ChangeLogAddInOptionPanelWidget.cs: Fix compiler warning.

2007-08-31  Mike Krüger <mkrueger@novell.com> 

	* ProjectOptionPanel.cs, ChangeLogAddIn.cs,
	  gtk-gui/MonoDevelop.ChangeLogAddIn.ProjectOptionPanelWidget.cs,
	  ChangeLogAddInOptionPanelWidget.cs, CommitDialogExtensionWidget.cs:
	  Changes due to new property infrastructure.

2007-08-14  Lluis Sanchez Gual <lluis@novell.com> 

	* AddLogEntryDialog.cs: When changing selection, get the text from the
	  changes table, if it has changed. Fixes bug #82437.

2007-08-14  Lluis Sanchez Gual <lluis@novell.com> 

	* ChangeLogAddIn.mdp, gtk-gui/gui.stetic, Makefile.am: Updated.
	* ChangeLogService.cs: Fix nullref exception.
	* CommitDialogExtensionWidget.cs: Fix warning.

2007-08-09  Lluis Sanchez Gual <lluis@novell.com> 

	* ChangeLogAddIn.addin.xml, ChangeLogAddIn.mdp, Makefile.am: Reorganized the
	  extension point hierarchy. Embedded all add-in manifests as resources.

2007-08-06  Levi Bard <taktaktaktaktaktaktaktaktaktak@gmail.com>

	* ChangeLogAddin.cs: Fixed #82322. 

2007-08-02  Lluis Sanchez Gual <lluis@novell.com> 

	* gtk-gui/MonoDevelop.ChangeLogAddIn.ProjectOptionPanelWidget.cs: Added
	  missing file.

2007-08-02  Lluis Sanchez Gual <lluis@novell.com> 

	* ProjectOptionPanel.cs, ChangeLogData.cs, ProjectOptionPanelWidget.cs,